fix complete icon alignment in iSO

--- a/Tasks/app/views/main.css
+++ b/Tasks/app/views/main.css
@@ -23,6 +23,6 @@
 
 .completeIcon
 {
-    margin-top:38;
     margin-left:20;
+    vertical-align:center;
 }
